libs/tests/src/snapshots/tests__tests__it_can_drop_held_container.snap
---
source: libs/tests/src/tests.rs
expression: domain.snapshot().await?
---
[
  {
    "acls": {
      "rules": []
    },
    "class": {
      "name": "scopes.ItemClass"
    },
    "creator": null,
    "identity": {
      "private": "Private#0",
      "public": "Public#0"
    },
    "key": "world",
    "parent": null,
    "scopes": {
      "identifiers": {
        "acls": {
          "rules": []
        },
        "gid": 5
      },
      "props": {
        "core": {
          "gid": {
            "acls": null,
            "value": 0
          },
          "name": {
            "acls": null,
            "value": "World"
          }
        }
      },
      "usernames": {
        "users": {
          "burrow": "E-3"
        }
      }
    }
  },
  {
    "acls": {
      "rules": []
    },
    "class": {
      "name": "scopes.ItemClass"
    },
    "creator": null,
    "identity": {
      "private": "Private#1",
      "public": "Public#1"
    },
    "key": "E-0",
    "parent": null,
    "scopes": {
      "occupyable": {
        "acls": {
          "rules": []
        },
        "occupancy": 0,
        "occupied": [],
        "routes": null
      },
      "props": {
        "core": {
          "gid": {
            "acls": null,
            "value": 1
          },
          "name": {
            "acls": null,
            "value": "Place"
          }
        }
      }
    }
  },
  {
    "acls": {
      "rules": []
    },
    "class": {
      "name": "scopes.ItemClass"
    },
    "creator": null,
    "identity": {
      "private": "Private#2",
      "public": "Public#2"
    },
    "key": "E-1",
    "parent": null,
    "scopes": {
      "carryable": {
        "kind": {
          "identity": {
            "private": "Private#3",
            "public": "Public#3"
          }
        },
        "quantity": 1.0
      },
      "location": {
        "container": {
          "class": "scopes.ItemClass",
          "gid": 3,
          "key": "E-2",
          "name": "Vessel"
        }
      },
      "props": {
        "core": {
          "gid": {
            "acls": null,
            "value": 2
          },
          "name": {
            "acls": null,
            "value": "Key"
          }
        }
      }
    }
  },
  {
    "acls": {
      "rules": []
    },
    "class": {
      "name": "scopes.ItemClass"
    },
    "creator": null,
    "identity": {
      "private": "Private#4",
      "public": "Public#4"
    },
    "key": "E-2",
    "parent": null,
    "scopes": {
      "carryable": {
        "kind": {
          "identity": {
            "private": "Private#5",
            "public": "Public#5"
          }
        },
        "quantity": 1.0
      },
      "containing": {
        "capacity": null,
        "holding": [
          {
            "class": "scopes.ItemClass",
            "gid": 2,
            "key": "E-1",
            "name": "Key"
          }
        ],
        "produces": {}
      },
      "location": {
        "container": {
          "class": "scopes.ItemClass",
          "gid": 5,
          "key": "E-4",
          "name": "Welcome Area"
        }
      },
      "props": {
        "core": {
          "gid": {
            "acls": null,
            "value": 3
          },
          "name": {
            "acls": null,
            "value": "Vessel"
          }
        }
      }
    }
  },
  {
    "acls": {
      "rules": []
    },
    "class": {
      "name": "scopes.ItemClass"
    },
    "creator": null,
    "identity": {
      "private": "Private#6",
      "public": "Public#6"
    },
    "key": "E-3",
    "parent": null,
    "scopes": {
      "containing": {
        "capacity": null,
        "holding": [],
        "produces": {}
      },
      "occupying": {
        "area": {
          "class": "scopes.ItemClass",
          "gid": 5,
          "key": "E-4",
          "name": "Welcome Area"
        }
      },
      "props": {
        "core": {
          "gid": {
            "acls": null,
            "value": 4
          },
          "name": {
            "acls": null,
            "value": "Living"
          }
        }
      },
      "wearing": {
        "wearing": []
      }
    }
  },
  {
    "acls": {
      "rules": []
    },
    "class": {
      "name": "scopes.ItemClass"
    },
    "creator": null,
    "identity": {
      "private": "Private#7",
      "public": "Public#7"
    },
    "key": "E-4",
    "parent": null,
    "scopes": {
      "containing": {
        "capacity": null,
        "holding": [
          {
            "class": "scopes.ItemClass",
            "gid": 3,
            "key": "E-2",
            "name": "Vessel"
          }
        ],
        "produces": {}
      },
      "occupyable": {
        "acls": {
          "rules": []
        },
        "occupancy": 0,
        "occupied": [
          {
            "class": "scopes.ItemClass",
            "gid": 4,
            "key": "E-3",
            "name": "Living"
          }
        ],
        "routes": [
          {
            "simple": {
              "name": "East",
              "to": {
                "class": "scopes.ItemClass",
                "gid": 1,
                "key": "E-0",
                "name": "Place"
              }
            }
          }
        ]
      },
      "props": {
        "core": {
          "gid": {
            "acls": null,
            "value": 5
          },
          "name": {
            "acls": null,
            "value": "Welcome Area"
          }
        }
      }
    }
  }
]
