libs/tests/src/snapshots/tests__tests__it_can_rehold_dropped_container.snap
---
source: libs/tests/src/lib.rs
expression: domain.snapshot().await?
---
[
  {
    "acls": {
      "py/object": "",
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "py/object": "",
      "signature": null
    },
    "key": "E-0",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "props": {
      "map": {
        "gid": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": 1
        },
        "name": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": "Place"
        }
      },
      "py/object": "model.properties.Common"
    },
    "py/object": "",
    "scopes": {},
    "version": {
      "i": 3,
      "py/object": ""
    }
  },
  {
    "acls": {
      "py/object": "",
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "py/object": "",
      "signature": null
    },
    "key": "E-1",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "props": {
      "map": {
        "gid": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": 2
        },
        "name": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": "Key"
        }
      },
      "py/object": "model.properties.Common"
    },
    "py/object": "",
    "scopes": {
      "location": {
        "container": {
          "gid": 3,
          "key": "E-2",
          "klass": "",
          "name": "Vessel",
          "py/object": "model.entity.EntityRef",
          "py/ref": "model.entity.Entity"
        }
      }
    },
    "version": {
      "i": 3,
      "py/object": ""
    }
  },
  {
    "acls": {
      "py/object": "",
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "py/object": "",
      "signature": null
    },
    "key": "E-2",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "props": {
      "map": {
        "gid": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": 3
        },
        "name": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": "Vessel"
        }
      },
      "py/object": "model.properties.Common"
    },
    "py/object": "",
    "scopes": {
      "containing": {
        "capacity": null,
        "holding": [
          {
            "gid": 2,
            "key": "E-1",
            "klass": "",
            "name": "Key",
            "py/object": "model.entity.EntityRef",
            "py/ref": "model.entity.Entity"
          }
        ],
        "produces": {}
      },
      "location": {
        "container": {
          "gid": 4,
          "key": "E-3",
          "klass": "",
          "name": "Living",
          "py/object": "model.entity.EntityRef",
          "py/ref": "model.entity.Entity"
        }
      }
    },
    "version": {
      "i": 3,
      "py/object": ""
    }
  },
  {
    "acls": {
      "py/object": "",
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "py/object": "",
      "signature": null
    },
    "key": "E-3",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "props": {
      "map": {
        "gid": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": 4
        },
        "name": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": "Living"
        }
      },
      "py/object": "model.properties.Common"
    },
    "py/object": "",
    "scopes": {
      "containing": {
        "capacity": null,
        "holding": [
          {
            "gid": 3,
            "key": "E-2",
            "klass": "",
            "name": "Vessel",
            "py/object": "model.entity.EntityRef",
            "py/ref": "model.entity.Entity"
          }
        ],
        "produces": {}
      },
      "occupying": {
        "area": {
          "gid": 6,
          "key": "E-5",
          "klass": "",
          "name": "Welcome Area",
          "py/object": "model.entity.EntityRef",
          "py/ref": "model.entity.Entity"
        }
      }
    },
    "version": {
      "i": 3,
      "py/object": ""
    }
  },
  {
    "acls": {
      "py/object": "",
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "py/object": "",
      "signature": null
    },
    "key": "world",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "props": {
      "map": {
        "gid": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": 5
        },
        "name": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": "World"
        }
      },
      "py/object": "model.properties.Common"
    },
    "py/object": "",
    "scopes": {
      "identifiers": {
        "acls": {
          "py/object": "",
          "rules": []
        },
        "gid": 7
      },
      "usernames": {
        "users": {
          "burrow": "E-3"
        }
      }
    },
    "version": {
      "i": 3,
      "py/object": ""
    }
  },
  {
    "acls": {
      "py/object": "",
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "py/object": "",
      "signature": null
    },
    "key": "E-5",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "props": {
      "map": {
        "gid": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": 6
        },
        "name": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": "Welcome Area"
        }
      },
      "py/object": "model.properties.Common"
    },
    "py/object": "",
    "scopes": {
      "containing": {
        "capacity": null,
        "holding": [
          {
            "gid": 7,
            "key": "E-6",
            "klass": "",
            "name": "East",
            "py/object": "model.entity.EntityRef",
            "py/ref": "model.entity.Entity"
          }
        ],
        "produces": {}
      },
      "occupyable": {
        "acls": {
          "py/object": "",
          "rules": []
        },
        "occupancy": 0,
        "occupied": [
          {
            "gid": 4,
            "key": "E-3",
            "klass": "",
            "name": "Living",
            "py/object": "model.entity.EntityRef",
            "py/ref": "model.entity.Entity"
          }
        ]
      }
    },
    "version": {
      "i": 3,
      "py/object": ""
    }
  },
  {
    "acls": {
      "py/object": "",
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "py/object": "",
      "signature": null
    },
    "key": "E-6",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "props": {
      "map": {
        "gid": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": 7
        },
        "name": {
          "acls": {
            "py/object": "",
            "rules": []
          },
          "py/object": "",
          "value": "East"
        }
      },
      "py/object": "model.properties.Common"
    },
    "py/object": "",
    "scopes": {
      "exit": {
        "area": {
          "gid": 1,
          "key": "E-0",
          "klass": "",
          "name": "Place",
          "py/object": "model.entity.EntityRef",
          "py/ref": "model.entity.Entity"
        }
      },
      "location": {
        "container": {
          "gid": 6,
          "key": "E-5",
          "klass": "",
          "name": "Welcome Area",
          "py/object": "model.entity.EntityRef",
          "py/ref": "model.entity.Entity"
        }
      }
    },
    "version": {
      "i": 3,
      "py/object": ""
    }
  }
]
