libs/tests/src/snapshots/tests__tests__it_evaluates_a_simple_look.snap
---
source: libs/tests/src/tests.rs
expression: domain.snapshot().await?
---
[
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "signature": null
    },
    "key": "E-0",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "scopes": {
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 1
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "Place"
            }
          }
        }
      }
    },
    "version": {
      "i": 3
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "signature": null
    },
    "key": "E-1",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "scopes": {
      "location": {
        "container": {
          "gid": 3,
          "key": "E-2",
          "klass": "",
          "name": "Vessel"
        }
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 2
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "Key"
            }
          }
        }
      }
    },
    "version": {
      "i": 3
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "signature": null
    },
    "key": "E-2",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "scopes": {
      "containing": {
        "capacity": null,
        "holding": [
          {
            "gid": 2,
            "key": "E-1",
            "klass": "",
            "name": "Key"
          }
        ],
        "produces": {}
      },
      "location": {
        "container": {
          "gid": 4,
          "key": "E-3",
          "klass": "",
          "name": "Living"
        }
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 3
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "Vessel"
            }
          }
        }
      }
    },
    "version": {
      "i": 3
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "signature": null
    },
    "key": "E-3",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "scopes": {
      "containing": {
        "capacity": null,
        "holding": [
          {
            "gid": 3,
            "key": "E-2",
            "klass": "",
            "name": "Vessel"
          }
        ],
        "produces": {}
      },
      "occupying": {
        "area": {
          "gid": 6,
          "key": "E-5",
          "klass": "",
          "name": "Welcome Area"
        }
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 4
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "Living"
            }
          }
        }
      }
    },
    "version": {
      "i": 3
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "signature": null
    },
    "key": "world",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "scopes": {
      "identifiers": {
        "acls": {
          "rules": []
        },
        "gid": 7
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 5
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "World"
            }
          }
        }
      },
      "usernames": {
        "users": {
          "burrow": "E-3"
        }
      }
    },
    "version": {
      "i": 3
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "signature": null
    },
    "key": "E-5",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "scopes": {
      "containing": {
        "capacity": null,
        "holding": [
          {
            "gid": 7,
            "key": "E-6",
            "klass": "",
            "name": "East"
          }
        ],
        "produces": {}
      },
      "occupyable": {
        "acls": {
          "rules": []
        },
        "occupancy": 0,
        "occupied": [
          {
            "gid": 4,
            "key": "E-3",
            "klass": "",
            "name": "Living"
          }
        ]
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 6
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "Welcome Area"
            }
          }
        }
      }
    },
    "version": {
      "i": 3
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "",
      "public": "",
      "signature": null
    },
    "key": "E-6",
    "klass": {
      "py/type": ""
    },
    "parent": null,
    "scopes": {
      "exit": {
        "area": {
          "gid": 1,
          "key": "E-0",
          "klass": "",
          "name": "Place"
        }
      },
      "location": {
        "container": {
          "gid": 6,
          "key": "E-5",
          "klass": "",
          "name": "Welcome Area"
        }
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 7
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "East"
            }
          }
        }
      }
    },
    "version": {
      "i": 3
    }
  }
]
