libs/tests/src/snapshots/tests__tests__it_evaluates_two_simple_looks_separate_session.snap
---
source: libs/tests/src/tests.rs
expression: domain.snapshot().await?
---
[
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "Private#0",
      "public": "Public#0"
    },
    "key": "world",
    "klass": {
      "py/type": "scopes.ItemClass"
    },
    "parent": null,
    "scopes": {
      "identifiers": {
        "acls": {
          "rules": []
        },
        "gid": 6
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 0
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "World"
            }
          }
        }
      },
      "usernames": {
        "users": {
          "burrow": "E-3"
        }
      }
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "Private#1",
      "public": "Public#1"
    },
    "key": "E-0",
    "klass": {
      "py/type": "scopes.ItemClass"
    },
    "parent": null,
    "scopes": {
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 1
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "Place"
            }
          }
        }
      }
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "Private#2",
      "public": "Public#2"
    },
    "key": "E-1",
    "klass": {
      "py/type": "scopes.ItemClass"
    },
    "parent": null,
    "scopes": {
      "location": {
        "container": {
          "gid": 3,
          "key": "E-2",
          "klass": "scopes.ItemClass",
          "name": "Vessel"
        }
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 2
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "Key"
            }
          }
        }
      }
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "Private#3",
      "public": "Public#3"
    },
    "key": "E-2",
    "klass": {
      "py/type": "scopes.ItemClass"
    },
    "parent": null,
    "scopes": {
      "containing": {
        "capacity": null,
        "holding": [
          {
            "gid": 2,
            "key": "E-1",
            "klass": "scopes.ItemClass",
            "name": "Key"
          }
        ],
        "produces": {}
      },
      "location": {
        "container": {
          "gid": 4,
          "key": "E-3",
          "klass": "scopes.ItemClass",
          "name": "Living"
        }
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 3
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "Vessel"
            }
          }
        }
      }
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "Private#5",
      "public": "Public#5"
    },
    "key": "E-3",
    "klass": {
      "py/type": "scopes.ItemClass"
    },
    "parent": null,
    "scopes": {
      "containing": {
        "capacity": null,
        "holding": [
          {
            "gid": 3,
            "key": "E-2",
            "klass": "scopes.ItemClass",
            "name": "Vessel"
          }
        ],
        "produces": {}
      },
      "occupying": {
        "area": {
          "gid": 5,
          "key": "E-4",
          "klass": "scopes.ItemClass",
          "name": "Welcome Area"
        }
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 4
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "Living"
            }
          }
        }
      }
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "Private#7",
      "public": "Public#7"
    },
    "key": "E-4",
    "klass": {
      "py/type": "scopes.ItemClass"
    },
    "parent": null,
    "scopes": {
      "containing": {
        "capacity": null,
        "holding": [
          {
            "gid": 6,
            "key": "E-5",
            "klass": "scopes.ItemClass",
            "name": "East"
          }
        ],
        "produces": {}
      },
      "occupyable": {
        "acls": {
          "rules": []
        },
        "occupancy": 0,
        "occupied": [
          {
            "gid": 4,
            "key": "E-3",
            "klass": "scopes.ItemClass",
            "name": "Living"
          }
        ]
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 5
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "Welcome Area"
            }
          }
        }
      }
    }
  },
  {
    "acls": {
      "rules": []
    },
    "creator": null,
    "identity": {
      "private": "Private#8",
      "public": "Public#8"
    },
    "key": "E-5",
    "klass": {
      "py/type": "scopes.ItemClass"
    },
    "parent": null,
    "scopes": {
      "exit": {
        "area": {
          "gid": 1,
          "key": "E-0",
          "klass": "scopes.ItemClass",
          "name": "Place"
        }
      },
      "location": {
        "container": {
          "gid": 5,
          "key": "E-4",
          "klass": "scopes.ItemClass",
          "name": "Welcome Area"
        }
      },
      "props": {
        "props": {
          "map": {
            "gid": {
              "acls": {
                "rules": []
              },
              "value": 6
            },
            "name": {
              "acls": {
                "rules": []
              },
              "value": "East"
            }
          }
        }
      }
    }
  }
]
